[metadata]
name = serpentime
version = 0.0.2
author = Maxime Costalonga
description = A Chronodex like time management tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xamcost/serpentime

[options]
packages = find:
install_requires =
    requests
    importlib; python_version == "2.6"
    pyqt5
